update all things
